--- a/package.json
+++ b/package.json
@@ -9,9 +9,10 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@google/genai": "^1.35.0",
+    "mongodb": "^7.0.0",
     "react": "^19.2.3",
     "react-dom": "^19.2.3",
-    "@google/genai": "^1.35.0",
     "recharts": "^3.6.0"
   },
   "devDependencies": {
