--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "mongodb": "^7.0.0",
     "react": "^19.2.3",
     "react-dom": "^19.2.3",
+    "react-hot-toast": "^2.6.0",
     "recharts": "^3.6.0"
   },
   "devDependencies": {
